Update to use hono
